removed Leo Prada

--- a/resume.html
+++ b/resume.html
@@ -101,7 +101,7 @@
             <li>
               <h3>Project Manager and QA, Certius Technologies</h3>
               <p class="date">Aug 2017 - November 2020</p>
-              <p>Leading software projects for English speaking countries (US, Canada, UK) and also building the QA environment, design of test cases, execution, follow up.</p>
+              <p>Leading software projects for English speaking countries (US, Canada, UK) and also building the QA environment, design of test cases, execution, follow up.	Making sure project expectations are met and exceeded, adhering to challenging schedules while staying within budget, and according to scope.</p>
             </li>
             <li>
               <h3>Technical Document Controller, Techint</h3>
@@ -156,7 +156,7 @@
               <h3>Languages</h3>
               <p class="date">Fluent: English, Spanish, Croatian</p>
 			  <p class="date">Can understand fairly well: Bosnian, Serbian</p>
-			  <p class="date">Intermediate: Ucrainian</p>
+			  <p class="date">Intermediate: Ukrainian</p>
 			  
               
             </li>
