--- a/resume.html
+++ b/resume.html
@@ -93,8 +93,16 @@
         <div class="mb-5">
           <ul class="resume-list">
 			<li>
+              <h3>Technical Project/Product Manager, Scalio</h3>
+              <p class="date">Apr 2022 - July 2022</p>
+              <p>Leading internal product initiative to create an analytics module that can be sold to customers in the primary line of revenue: investment platforms, conducting a
+				thorough analysis of the product needs, main competitors, and value provided to our customers.</p>
+			   <p>Participating in meetings with different stakeholders: daily, planning, grooming, strategy, process improvement, bug squashing. Training team in Jira and Notion. Discussing room for improvement in internal processes.</p>
+			  <p>Presales activities: business development, generating leads on Linkedin, project estimation coordination. Meetings with prospects. Training team in Jira and Confluence usage. Definition of workflows, Guidelines on documentation needs.</p>
+            </li>
+			<li>
               <h3>Technical Project Manager, Solvd, Inc.</h3>
-              <p class="date">Mar 2021 - Present</p>
+              <p class="date">Mar 2021 - Mar 2022</p>
               <p>Tracking scope, budget and timeline. Leading the scrum daily, planning, retrospective, grooming meetings. Constant communication with the customer to inform the current status. </p>
 			  <p>Presales activities: business development, generating leads on Linkedin, project estimation coordination. Meetings with prospects. Training team in Jira and Confluence usage. Definition of workflows, Guidelines on documentation needs.</p>
             </li>
