--- a/resume.html
+++ b/resume.html
@@ -92,6 +92,13 @@
         <h1 class="mb-5">Experience</h1>
         <div class="mb-5">
           <ul class="resume-list">
+		  <li>
+              <h3>Sales Engineer, Zappix, Inc.</h3>
+              <p class="date">Aug 2022 - </p>
+              <p>Supporting the sales cycle at different stages, gathering requirements and drafting documents, building marketing collateral, also finding and presenting new leads for partnerships.
+</p>
+			  <p>Presales activities: business development, generating leads on Linkedin. Meetings with prospects. Definition of requirements documents.</p>
+            </li>
 			<li>
               <h3>Technical Project/Product Manager, Scalio</h3>
               <p class="date">Apr 2022 - July 2022</p>
@@ -136,6 +143,17 @@
 
 
         <h1 class="mb-5">Education</h1>
+		  <div class="mb-5">
+          <ul class="resume-list">
+            <li>
+              <h3>Coderhouse</h3>
+              <p class="date">2021</p>
+              <p>Product Management </p>
+            </li>
+            
+          </ul>
+        </div>
+		
         <div class="mb-5">
           <ul class="resume-list">
             <li>
