changed date for Zappix

--- a/resume.html
+++ b/resume.html
@@ -94,7 +94,7 @@
           <ul class="resume-list">
 		  <li>
               <h3>Sales Engineer, Zappix, Inc.</h3>
-              <p class="date">Aug 2022 - </p>
+              <p class="date">Aug 2022 - Mar 2024</p>
               <p>Supporting the sales cycle at different stages, gathering requirements and drafting documents, building marketing collateral, also finding and presenting new leads for partnerships.
 </p>
 			  <p>Presales activities: business development, generating leads on Linkedin. Meetings with prospects. Definition of requirements documents.</p>
