--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
 
       </div>
       
-      <aside style="background-image: url(img/profile_big.jpg);"></aside>
+      <aside style="background-image: url(img/aside_index.jpg); "></aside>
       <main>
         <h1 class="mb-0">Hi, I'm Leo Prada</h1>
         <div class="mb-5">
         <p class="lead mb-3">Technical Project Manager</p>
-        <p>With over twenty years of overall experience, I am very seasoned in all types of work: freelance, big corporations, small enterprises.</p>
+        <p>With over twenty-five years of overall experience, I am very seasoned in all types of work: freelance, big corporations, small enterprises.</p>
         <p>I manage custom multi-language software application projects. My passion for order and discipline helps me keep track of the projects I manage. </p>
         </div>
-
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/hZNSrKHO760?si=HalQzo5iGnikURVA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p  style="font-size:2em;text-align:left;">
 		 <a href="https://twitter.com/leandro_prada" target="_blank"  class="fa fa-twitter a_twitter"></a>
           <a href="https://www.facebook.com/leandroprada" target="_blank" class="fa fa-facebook a_facebook"></a>
