updated youtube reference

--- a/resume.html
+++ b/resume.html
@@ -70,7 +70,7 @@
         <ul class="mb-5">
           <li class="active"><a href="index.html">Bio</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li> <a href="mailto:leandroprada@gmail.com?subject='Hi Leo, I'm contacting you about your website'" target="_blank" class="download-btn">Email me! <i class="fa fa-envelope"></i></a>
+          <li> <a href="mailto:leandroprada@gmail.com?subject='Hi Leo, I am contacting you about your website'" target="_blank" class="download-btn">Email me! <i class="fa fa-envelope"></i></a>
 	  
 		  </li>
         </ul>
